# np-shared-array

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
np_shared_array/: __init__.py  shared_array.py
src/np_shared_array/: shared_array.py
tests/: test_shared_memory.py
