[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "np_shared_array"
authors = [
    {name = "Tom McLean"},
]
description = "Wrapper for sharing numpy arrays between processes"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "np_shared_array.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
py-modules = ["np_shared_array"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | configs
    | examples
)/
'''

[tool.ruff]
line-length = 120
ignore = ["F405", "B008"]
select = ["E", "F", "B", "C4", "DTZ", "PTH", "I001"]
exclude = []

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]

[tool.ruff.isort]
split-on-trailing-comma = true
known-third-party = []
known-first-party = ["np_shared_array"]
no-lines-before = ["local-folder"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "this",
    "local-folder"
]

[tool.ruff.isort.sections]
"this" = ["np_shared_array"]
